# web

./: .env.devnet  .env.sample  .eslintrc.js  .gitignore  .gitmodules  Anna_KaRNNa.ipynb  L.html  README.md  aplay.ipynb  aplay_bak.ipynb  chatbot.md  checklist  checklist.md  dev-sample.md  dev.md  dev2.md  error.md  gitconfig  gitconfig.html  hardhat.config.ts  index.html  index.md  know-agora.html  know-bak.html  know-pub.html  know.html  know.md  know.txt  know2.html  know2.md  know2.txt  m2.sql  m2.txt  memo-store.txt  memo.txt  merge_sols.sh  merge_txt.sh  mergedTextFiles.txt  ms.txt  newcomer.html  (+4 more)
bak/: kown.html.bak
circuits/: AgeCheck.circum
colab/: aplay.ipynb
contracts/: AllBasic.sol  AllBasic.sol.bak  AllBasicErrorConstants.sol  AllBasicErrors.sol  AllBasicFriend.sol  AllCounter.sol  IAllBasic.sol  IEntryPoint.sol  ILock.sol  IStakeManager.sol  Lock.sol  PackedUserOperation.sol
doc/: CodingStyle.md  ProjectStyle.md
ehack-sch-part-1/: package.json
ehack-typescript-sch-part-2/: hardhat.config.ts
eondo-v1/: README.md  hardhat.config.ts
eplanet/: package.json
erc4337-aa/: README.md  hardhat.config.ts  package.json
erc6900-reference/: .env.sample  Makefile  README.md  foundry.toml
euniswap-v2-hardhat/: hardhat.config.ts
evalidators/: README.md
ex/: .env.sample  .eslintrc  .gitignore  .prettierrc  README.md  foundry.toml  (+5 more)
ex-j/: hardhat.config.ts  package.json
ex-projects/exa/ai/: pyproject.toml
exlang/exa/langchain-course/chat-wth-your-pdf/: .gitignore  pyproject.toml
exlang/exa/langchain-course/code-interpreter/: pyproject.toml
(+2113 files in other folders)
